improve block searching

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="itemList">
             <div id="ddl">
-                <input type="text" placeholder="Search items" id="searchInput" onkeyup="filterFunction()">
+                <input type="text" placeholder="Search items" id="searchInput">
             </div>
             <div id="editor">
                 <div id="components"></div>
