--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             </div>
         </div>
         <div class="edit"></div>
-        <script src="components.js"></script>
+        <script src="./components/generate.js"></script>
+        <script src="./components/components.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
