--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
                     <p class="Warning256">Command is over 256 characters and will need to be entered via command block</p>
                 </div>
             </div>
+            <h2>How to use</h2>
+            <ol>
+                <li>Enter the item you want to create in thesearch box above</li>
+                <li>On the right side, click on the component's of the item you want to edit, you can click the Minecraft wiki reference for more information on each component</li>
+                <ul>
+                    <li>Ticking the "Active" checkbox makes the component get added to the command</li>
+                    <li>Ticking the "Remove" checkbox removes that component (if default behaviour) from the item</li>
+                    <li>All component's inputs are the same as found in the wiki, if not there will be a <img src="./res/help.svg" width="16" class="help" /> symbol which will give more information when hovered</li>
+                </ul>
+                <li>Click generate command to use in Minecraft, note that commands longer than 256 characters need to be entered via command block</li>
+            </ol>
         </div>
         <div class="edit"></div>
         <script src="./components/generate.js"></script>
