--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li>Ticking the "Active" checkbox makes the component get added to the command</li>
                     <li>Ticking the "Remove" checkbox removes that component (if default behaviour) from the item</li>
                     <li>All component's inputs are the same as found in the wiki, if not there will be a <img src="./res/help.svg" width="16" class="help" title="Help will look like this" /> symbol which will give more information when hovered</li>
+                    <li>Leave an input blank to use the default value (Note: checkbox and dropdowns don't follow this)</li>
                 </ul>
                 <li>Click generate command to use in Minecraft</li>
                 <ul>
